--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "nodejsrevise",
+  "name": "node_crash_course",
   "version": "1.0.0",
-  "description": "learning Node.js",
+  "description": "Revise Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Mark",
   "license": "ISC",
