--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mark",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^3.2.7",
     "mysql": "^2.17.1",
     "uuid": "^3.3.2"
   },
